[package]
name = "palmier"
version = "0.1.0"
authors = ["kvfi <mail@ouafi.net>"]
edition = "2018"


[dependencies]
lazy_static = "1.4.0"
structopt = { version = "0.3" }
openssl = { version = "0.10.4" }
passwords = { version = "3.1.3" }
rust-argon2 = "0.8.3"
hmac = { version = "0.10.1" }
rand = { version = "0.8.3" }
